--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,8 +31,23 @@ img {
   width: 100%;
 }
 
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+}
+
 .x-large {
   font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+.large {
+  font-size: 3rem;
   line-height: 1.2;
   margin-bottom: 1rem;
 }
@@ -40,6 +55,14 @@ img {
 .lead {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.my-1 {
+  margin: 1rem 0;
 }
 
 .btn {
@@ -81,6 +104,20 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.form .form-group {
+  margin: 1.2rem 0;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"] {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
 }
 
 .navbar {
@@ -132,6 +169,10 @@ img {
 @media (max-width: 700px) {
   .x-large {
     font-size: 3rem;
+  }
+
+  .large {
+    font-size: 2rem;
   }
 
   .lead {
