--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,7 @@
   --dark-color: #343a40;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
+  --success-color: #28a745;
 }
 
 * {
@@ -118,6 +119,11 @@ img {
 
 .alert-danger {
   background: var(--danger-color);
+  color: #fff;
+}
+
+.alert-success {
+  background: var(--success-color);
   color: #fff;
 }
 
