--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,6 +117,7 @@ img {
   color: #fff;
 }
 
+.btn-danger,
 .alert-danger {
   background: var(--danger-color);
   color: #fff;
@@ -195,6 +196,16 @@ button {
 
 .form .social-input i.fa-instagram {
   color: #3f729b;
+}
+
+.table th,
+.table td {
+  padding: 1rem;
+  text-align: left;
+}
+
+.table th {
+  background: var(--light-color);
 }
 
 .navbar {
